@@ -100,7 +100,7 @@ def replayChanges(dataRanges, args, lib):
     progressBar.close()
 
 
-def handleSignal(nbdkitProcess, device, blockMap, log, signum, _):
+def handleSignal(lib, nbdkitProcess, device, blockMap, log, signum, _):
     """Catch signal, attempt to stop processes."""
     log.info("Received signal: [%s]", signum)
     disconnectDevice = subprocess.run(
@@ -112,18 +112,8 @@ def handleSignal(nbdkitProcess, device, blockMap, log, signum, _):
     os.remove(blockMap.name)
     log.info("Removing nbdkit logfile: [%s]", nbdkitProcess.logFile)
     os.remove(nbdkitProcess.logFile)
-    killProc(nbdkitProcess.pid)
+    lib.killProc(nbdkitProcess.pid)
     sys.exit(0)
-
-
-def killProc(pid, exitCode=1):
-    """Attempt to kill nbdkit process in case of
-    error"""
-    try:
-        os.kill(pid, signal.SIGKILL)
-    except ProcessLookupError:
-        pass
-    sys.exit(exitCode)
 
 
 def getDataRanges(lib, stream, sTypes, reader):
@@ -352,7 +342,7 @@ def main():
     )
     signal.signal(
         signal.SIGINT,
-        partial(handleSignal, nbdkitProcess, args.device, blockMap, logging),
+        partial(handleSignal, lib, nbdkitProcess, args.device, blockMap, logging),
     )
 
     maxRetry = 10
@@ -385,7 +375,7 @@ def main():
                     "Unable to connect device after service start: %s",
                     e.stderr.decode(),
                 )
-                killProc(nbdkitProcess.pid)
+                lib.killProc(nbdkitProcess.pid)
             errMsg = e.stderr.decode()
             if "Connection refused" in errMsg:
                 logging.info("Nbd server refused connection, retry [%s]", retryCnt)
@@ -394,7 +384,7 @@ def main():
             else:
                 logging.error("Unable to map device:")
                 logging.error("Stderr: [%s]", errMsg)
-                killProc(nbdkitProcess.pid)
+                lib.killProc(nbdkitProcess.pid)
 
     if len(dataFiles) > 1:
         try:
@@ -402,7 +392,7 @@ def main():
         except Exception as e:
             logging.error("Unable to replay changes: %s", e)
             logging.exception(e)
-            killProc(nbdkitProcess)
+            lib.killProc(nbdkitProcess)
 
     logging.info("Done mapping backup image to [%s]", args.device)
     logging.info("Press CTRL+C to disconnect")
